# zlib-bindings

./: default.nix  release.nix  shell.nix  zlib-bindings-awake.cabal  zlib-bindings.cabal
Codec/: Zlib.hs
Codec/Zlib/: Lowlevel.hs
Data/Streaming/: Zlib.hs
Data/Streaming/Zlib/: Lowlevel.hs
c/: helper.c
test/: main.hs
