name:            zlib-bindings-awake
version:         0.1.2.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Matthew Chan <matt@parametri.city>
synopsis:        Low-level bindings to the zlib package.
description:     Ported from streaming-commons.
category:        Codec
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/themattchan/zlib-bindings
extra-source-files: cbits/crc32.h cbits/inffast.h cbits/inflate.h
                    cbits/trees.h cbits/deflate.h cbits/inffixed.h
                    cbits/inftrees.h cbits/zutil.h, test/main.hs,
                    LICENSE.gz

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4
    exposed-modules: Codec.Zlib
                     Codec.Zlib.Lowlevel
    ghc-options:     -Wall
    c-sources:       c/helper.c
    include-dirs:  cbits
    if os(windows)
        install-includes: zlib.h zconf.h

test-suite test
    main-is: main.hs
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    build-depends: base                  >= 4       && < 5
                 , bytestring
                 , zlib
                 , zlib-bindings-awake
                 , hspec                 >= 1.3
                 , QuickCheck            >= 2.3
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/zlib-bindings.git
